# sozidateli_bot_team1

./: .gitignore  README.md  docker-compose.production.yml  docker-compose.yml
.github/workflows/: main.yml
sozi_adm/: Dockerfile  manage.py  pyproject.toml
sozi_adm/api/: serializers.py  urls.py  views.py
sozi_adm/api/tests/: test_viewset.py
sozi_adm/meetings/: admin.py  apps.py  models.py
sozi_adm/meetings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_meeting_date_meeting.py  0004_alter_meeting_candidate.py  0005_remove_meeting_candidate.py  0006_alter_meeting_options.py  0007_alter_meeting_options.py  0008_alter_meeting_location.py
sozi_adm/sozi_adm/: asgi.py  settings.py  urls.py  wsgi.py
sozi_adm/users/: models.py
sozi_adm/users/migrations/: 0001_initial.py  0002_candidate_telegram_id_alter_candidate_last_name.py  0003_remove_candidate_text_candidate_category_and_more.py  0004_alter_candidate_managers_and_more.py  0005_remove_candidate_username.py  0006_remove_candidate_first_name.py  0007_candidate_name_alter_candidate_category.py  0008_candidate_confirm_date_alter_candidate_category.py  0009_alter_candidate_telegram_id.py  0010_remove_candidate_id_alter_candidate_telegram_id.py
tg_bot/: Dockerfile  README.md  config.py  constants.py  handlers.py  kb.py  keyboards.py  main.py  parser.py  pyproject.toml  setup.cfg  states.py  text.py  utils.py
