[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["defender4 <yatskevichas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiogram = "^3.3.0"
python = "^3.12"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
